# MrMonkeyShopWare

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  tests.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.md  recomp_research_summary.md  tablon-de-operaciones.md
docs/api/: README.md  analyser.md  cleaner.md  database.md  dumper.md  extractor.md  game-profiles.md  game-workspace.md  logger.md  modulos-recompilacion.md  pipeline.md  shader-recomp.md  toml-generator.md  xex-parser.md
docs/arquitectura/: arquitectura.md  decisiones-diseno.md  flujo-datos.md
docs/desarrollo/: CODIGO_DE_CONDUCTA.md  CONTRIBUIR.md  DESARROLLO.md  FLUJO_GIT.md  GUIA_DE_ESTILO.md  PRUEBAS.md
docs/guias/: faq.md  inicio-rapido.md  primeros-pasos.md  recompilacion-xbox360.md  requisitos.md
docs/herramientas/: configuracion-recompilacion.md  disc-image-creator.md  extract-xiso.md  xenon-recomp.md  xextool.md
docs/modulos/: cli.md  core.md  gui-catalogo-vistas.md  gui.md  utilidades.md
docs/operaciones/: DESPLIEGUE.md  configuracion.md  docker.md  solucion-problemas.md
docs/proyecto/: ESTUDIO.md  ROADMAP.md  SEGURIDAD.md  SOPORTE.md  VISION.md
docs/tutoriales/: guia-analisis.md  guia-cmake.md  guia-dump.md  guia-extraccion.md  guia-recompilacion.md  guia-respaldos.md  pipeline-completo.md  primer-proyecto-recompilacion.md
landing/: index.html
profiles/: 4D5307D1.toml  4D5307E6.toml  _default.toml
runtime/: CMakeLists.txt
runtime/include/audio/: audio_system.h
runtime/include/input/: input_handler.h
runtime/include/renderer/: renderer.h
runtime/include/xbox/: xam.h  xboxkrnl.h
runtime/src/audio/: audio_system.cpp
runtime/src/input/: input_handler.cpp
runtime/src/renderer/: renderer_base.cpp
runtime/src/xboxkrnl/: memory.cpp  threading.cpp
scripts/: toml_generator.py
src/: __init__.py
src/cli/: __init__.py  analyse.py  db.py  dump.py  extract.py  main.py  pipeline.py  profiles.py  recomp.py  tomlgen.py
src/core/: __init__.py  analyser.py  build_automation.py  cleaner_xex.py  config.py  database.py  dumper.py  extractor.py  folder_scanner.py  game_profiles.py  game_workspace.py  logger.py  pipeline.py  reference_extractor.py  scaffolding.py  settings.py  shader_recomp.py  toml_generator.py  virtual_disc.py  xbox_drive_scanner.py  xenon_toml_generator.py  xenos_shader_recomp.py  xex_parser.py
src/gui/: __init__.py  app.py  main.py
src/gui/components/: __init__.py  dropzone.py  file_viewer.py  gamedetail.py  gamelist.py  input_selector.py  logview.py  settings.py  sidebar.py
src/utils/: __init__.py  getDrives.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_database.py  test_game_profiles.py  test_logger.py  test_pipeline.py  test_shader_recomp.py
