[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrmonkeyshopware"
version = "0.1.0"
description = "Kit de herramientas para portar juegos de Xbox 360 a PC nativo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MrMonkeyShopWare Team"}
]
keywords = ["xbox360", "game-porting", "xenon", "recompilation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "psutil",
    "pywin32",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/MrMonkey/MrMonkeyShopWare"
Documentation = "https://github.com/MrMonkey/MrMonkeyShopWare/tree/main/docs"
Repository = "https://github.com/MrMonkey/MrMonkeyShopWare.git"
Issues = "https://github.com/MrMonkey/MrMonkeyShopWare/issues"

[project.scripts]
mrmonkey-gui = "src.gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
